force-app/main/default/objects/cgcloud__Flatten_Org_Unit_Hierarchy__c/cgcloud__Flatten_Org_Unit_Hierarchy__c.object-meta.xml
<CustomObject>
    <description>This SObject holds node org unit hierarchy information for the Customer Segmentation functionality.</description>
    <label>Flatten Org Unit Hierarchy</label>
    <nameField>
        <displayFormat>FOUH-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flatten Org Unit Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>