force-app/main/default/objects/cgcloud__Flatten_Org_Unit_Hierarchy__c/fields/cgcloud__Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Account assigned to the org unit of the hierarchy node.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Flatten Org Unit Hierarchies</relationshipLabel>
    <relationshipName>Flatten_Org_Unit_Hierarchies</relationshipName>
    <type>Lookup</type>
</CustomField>