force-app/main/default/objects/cgcloud__Flatten_Org_Unit_Hierarchy__c/fields/cgcloud__Org_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Org_Unit__c</fullName>
    <description>Reference to the Org Unit of the hierarchy node.</description>
    <label>Org Unit</label>
    <referenceTo>cgcloud__Org_Unit__c</referenceTo>
    <relationshipLabel>Flatten Org Unit Hierarchies</relationshipLabel>
    <relationshipName>Flatten_Org_Unit_Hierarchies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>