force-app/main/default/objects/cgcloud__Flatten_Org_Unit_Hierarchy__c/fields/cgcloud__Org_Unit_Level_02__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Org_Unit_Level_02__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Org Unit level hierarchy.</description>
    <label>Org Unit 02</label>
    <referenceTo>cgcloud__Org_Unit__c</referenceTo>
    <relationshipLabel>Flatten Org Unit Hierarchies (Org Unit 02)</relationshipLabel>
    <relationshipName>Flatten_Org_Unit_Hierarchies2</relationshipName>
    <type>Lookup</type>
</CustomField>