force-app/main/default/objects/cgcloud__Flatten_Org_Unit_Hierarchy__c/fields/cgcloud__UpsertID__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__UpsertID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique Id to upsert records from CGCloud Processing Service.</description>
    <externalId>true</externalId>
    <label>UpsertID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>